fix css selector on button.sass to include the div that is now wrapping the svg when making the arrow icon display: none for most buttons.  Fix heights and alignment on header.sass now that divs wrap the svg icons/links

--- a/src/components/Button/button.sass
+++ b/src/components/Button/button.sass
@@ -1,7 +1,8 @@
 @import ../../sass/global
 
-.button-dark-orange, .button-black, .button-transparent
-    svg.right-arrow
-        display: none
+a
+    & .button-dark-orange, .button-black, .button-transparent
+        div.right-arrow
+            display: none
 
     
