--- a/src/components/Header/header.sass
+++ b/src/components/Header/header.sass
@@ -25,11 +25,17 @@ header .header-black-background
     justify-content: space-between
     padding: 32.5px 0
      
-.shopping-cart-icon
+.shopping-cart-icon, logo-icon, .hamburger-menu-icon
+    align-items: center
     display: flex
+
+.shopping-cart-icon
     justify-content: flex-end
+        
 
 .mobile-header.row.main-container
+    & .logo-icon
+        height: 25px
     
     +all-screen-bigger-than-mobile
         display:  none
